--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">EduGLO</a>
+                <a class="navbar-brand" href="#page-top">Edu<span style="color:#EAC435">GLO</span></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -66,7 +66,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-
+font-style: italic
     <!-- Header -->
     <header>
         <div class="container" id="maincontent" tabindex="-1">
@@ -74,7 +74,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">EduGLO</h1>
+                        <h1 class="name">Edu<span style="color: #EAC435">GLO</span></h1>
                         <hr class="star-light">
                         <span class="skills">Tired of running in circles?<br> We can help with that!</span>
                     </div>
@@ -257,8 +257,8 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <form>
-                            <h3>About Us</h3>
-                                <p>Our mission is to improve education by making the technology teachers use more efficient</a></p>
+                            <h3>Our Mission</h3>
+                                <p>Improve education by making the technology teachers use more efficient</a></p>
                         </form>  
                     </div>
                     <div class="footer-col col-md-4">
